# Nox

./: .gitignore  AGENT_INSTALL.md  CHANGELOG.md  README.md  install-extension.sh  nox-v3.sh
backend/: install.sh  pyproject.toml
backend/src/nox_server/: __init__.py  cli.py  config.py  crypto.py  paths.py  protocol.py  queue.py  server.py
backend/tests/: test_cli.py  test_config.py  test_crypto.py  test_install_script.py  test_paths.py  test_protocol.py  test_queue.py  test_server.py
extension/: extension.js  metadata.json  prefs.js  stylesheet.css
extension/schemas/: org.gnome.shell.extensions.nox-v3.gschema.xml
extension/src/: actor.js
extension/src/actions/: flip-at-wall.js  jetpack-jump.js  jump.js  lifecycle.js  rest.js  run.js  walk.js
extension/src/animation/: catalog.js  playback.js
extension/src/behavior/: conditions.js  registry.js  tree.js
extension/src/config/: gravity-profiles.js  settings.js
extension/src/connection/: transport.js  visual.js
extension/src/core/: action-state.js  body.js  constants.js  context.js  (+7 more)
nox/: install.sh  stylesheet.css
nox/schemas/: org.gnome.shell.extensions.nox-v3.gschema.xml
nox/src/: actor.js
nox/test/: assets.test.mjs  clean-folder.test.mjs  config.test.mjs  foundation.test.mjs  install-script.test.mjs  schema-prefs.test.mjs
test/: assets.test.mjs  clean-folder.test.mjs  config.test.mjs  foundation.test.mjs  install-script.test.mjs  schema-prefs.test.mjs
v3/: README.md  nox-v3.sh
v3/extension/: stylesheet.css
v3/test/: clean-folder.test.mjs  foundation.test.mjs  schema-prefs.test.mjs
(+43 files in other folders)
