[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nox-server"
version = "0.1.0"
description = "Nox desktop notification bridge backend"
requires-python = ">=3.11"

[project.scripts]
nox = "nox_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
